# scavenger2

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/game/: actor.rs  fov.rs  geometry.rs  map.rs  mod.rs
wasm/: .gitignore  Cargo.toml  build.sh  index.html  index.js
wasm/src/: lib.rs
