[package]
name = "scavenger"
version = "0.4.0"
authors = ["Steven Portzer <stevenportzer@gmail.com>"]
edition = "2018"

[lib]
name = "scavenger"

[dependencies]
rand = "0.7"

[dependencies.cursive]
version = "0.12"
default-features = false

[features]
default = ["ncurses-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
