[package]
name = "scavenger"
version = "0.4.0"
authors = ["Steven Portzer <stevenportzer@gmail.com>"]
edition = "2018"

[lib]
name = "scavenger"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.cursive]
version = "0.13"
default-features = false

[features]
default = ["bin", "ncurses-backend"]
bin = ["rand/std"]
ncurses-backend = ["cursive/ncurses-backend"]

[workspace]
members = [".", "wasm"]
default-members = ["."]

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
incremental = false
lto = true
