[package]
name = "scavenger-wasm"
version = "0.1.0"
authors = ["Steven Portzer <stevenportzer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.scavenger]
path = ".."
default-features = false

[profile.release]
codegen-units = 1
incremental = false
lto = true
